2006-06-01  Sven de Marothy  <sven@physto.se>

	* gnu/java/awt/peer/gtk/CairoGraphics2D.java
	(drawImage): Check for zero size.
	* gnu/java/awt/peer/gtk/GdkTextLayout.java:
	(setFont): Declare new native method.
	(GdkTextLayout): Read some attributes.
	* include/gnu_java_awt_peer_gtk_GdkTextLayout.h
	* native/jni/gtk-peer/gnu_java_awt_peer_gtk_GdkTextLayout.c
	(setFont): New native method.
	
2006-06-01  Sven de Marothy  <sven@physto.se>

	* gnu/java/awt/peer/gtk/BufferedImageGraphics.java
	(updateBufferedImage): Fix some errors.

2006-06-01  David Gilbert  <david.gilbert@object-refinery.com>

	* javax/swing/plaf/basic/BasicButtonUI.java: Minor source code style 
	fixes,
	* javax/swing/plaf/basic/BasicDirectoryModel.java: Likewise,
	* javax/swing/plaf/basic/BasicFileChooserUI.java: Likewise,
	* javax/swing/plaf/basic/BasicIconFactory.java: Likewise,
	* javax/swing/plaf/basic/BasicListUI.java: Likewise,
	* javax/swing/plaf/basic/BasicOptionPaneUI.java: Likewise,
	* javax/swing/plaf/basic/BasicRootPaneUI.java: Likewise,
	* javax/swing/plaf/basic/BasicScrollPaneUI.java: Likewise,
	* javax/swing/plaf/basic/BasicSpinnerUI.java: Likewise,
	* javax/swing/plaf/basic/BasicTabbedPaneUI.java: Likewise,
	* javax/swing/plaf/basic/BasicTextAreaUI.java: Likewise.
	
2006-06-01  David Gilbert  <david.gilbert@object-refinery.com>

	* javax/swing/JComboBox.java: Minor source code formatting fixes,
	* javax/swing/JEditorPane.java: Likewise,
	* javax/swing/JFormattedTextField.java: Likewise,
	* javax/swing/JLayeredPane.java: Likewise,
	* javax/swing/JScrollPane.java: Likewise,
	* javax/swing/JSlider.java: Likewise,
	* javax/swing/JSpinner.java: Likewise,
	* javax/swing/JTree.java: Likewise,
	* javax/swing/JViewport.java: Likewise,
	* javax/swing/UIDefaults.java: Likewise,
	* javax/swing/UIManager.java: Likewise.
	
2006-06-01  Sven de Marothy  <sven@physto.se>

	* gnu/java/awt/peer/gtk/BufferedImageGraphics.java
	(BufferedImageGraphics): Cache surfaces.