@@ -1,3 +1,7 @@
+2006-06-01  Audrius Meskauskas  <AudriusA@Bioinformatics.org>
+
+	* gnu/javax/swing/text/html/ImageViewIconFactory.java: New file.
+
 2006-06-01  Sven de Marothy  <sven@physto.se>
 
 	* gnu/java/awt/peer/gtk/CairoGraphics2D.java
